# sql-collector

./: .coveralls.yml  .gitignore  .travis.yml  Cargo.toml  README.md
src/: configuration.rs  database.rs  main.rs
src/metric/: mod.rs  template.rs
test/: configuration.yml
