[package]
name = "sql-collector"
version = "0.1.0"
authors = ["ledoyen"]

[features]
travis = ["cargo-travis"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
mysql = "12.0"
stopwatch = "0.0.7"
time = "0.1"
regex = "0.2"
lazy_static = "1.0"
cargo-travis = { version = "0.0.8", optional = true }

[dev-dependencies]
# stainless = "*"

[badges]
travis-ci = { repository = "ledoyen/sql-collector", branch = "master" }
coveralls = { repository = "ledoyen/sql-collector", branch = "master", service = "github" }
maintenance = { status = "experimental" }
